--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gatsby-link": "^1.6.5",
     "gatsby-plugin-catch-links": "^1.0.1",
     "gatsby-plugin-feed-generator": "^1.0.5",
+    "gatsby-plugin-preact": "^1.0.6",
     "gatsby-plugin-react-helmet": "^1.0.1",
     "gatsby-remark-prismjs": "^1.2.0",
     "gatsby-source-filesystem": "^1.4.1",
@@ -21,6 +22,7 @@
     "clean": "rm -rf public/*.html"
   },
   "devDependencies": {
+    "babel-plugin-styled-components": "^1.2.0",
     "gatsby-plugin-styled-components": "^1.0.1",
     "prettier": "^1.5.2"
   }
