Update about, linting, and theming system

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 node_modules
 .cache/
+yarn-error.log
 # Build directory
 public/
 .DS_Store
+.env*
+src/plugins
