--- a/.eslintrc
+++ b/.eslintrc
@@ -1,14 +1,8 @@
 {
   "parser": "babel-eslint",
-  "extends": [
-    "eslint:recommended",
-    "plugin:react/recommended",
-    "prettier",
-    "prettier/react"
-  ],
-  "plugins": [
-    "react"
-  ],
+  "root": true,
+  "extends": ["eslint:recommended", "prettier", "prettier/react"],
+  "plugins": ["react", "jsx-a11y", "import"],
   "parserOptions": {
     "ecmaVersion": 7,
     "sourceType": "module",
@@ -25,34 +19,16 @@
     "no-console": "off",
     "valid-jsdoc": "off",
     "require-jsdoc": "off",
-    "quotes": [
-      "error",
-      "single"
-    ],
-    "indent": [
-      "error",
-      2
-    ],
-    "consistent-return": [
-      "error",
-    ],
+    "quotes": ["error", "single"],
+    "indent": ["error", 2],
     "arrow-body-style": [
       "error",
       "as-needed",
       { "requireReturnForObjectLiteral": true }
     ],
-    "jsx-quotes": [
-      "error",
-      "prefer-double"
-    ],
-    "semi": [
-      "error",
-      "never"
-    ],
-    "object-curly-spacing": [
-      "error",
-      "always"
-    ],
+    "jsx-quotes": ["error", "prefer-double"],
+    "semi": ["error", "never"],
+    "object-curly-spacing": ["error", "always"],
     "comma-dangle": [
       "error",
       {
@@ -61,12 +37,6 @@
         "imports": "always-multiline",
         "exports": "always-multiline",
         "functions": "ignore"
-      }
-    ],
-    "react/prop-types": [
-      "error",
-      {
-        "ignore": ["children"]
       }
     ]
   }
