--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,13 @@
 {
   "parser": "babel-eslint",
   "root": true,
-  "extends": ["eslint:recommended", "prettier", "prettier/react"],
-  "plugins": ["react", "jsx-a11y", "import"],
+  "plugins": ["jsx-a11y"],
+  "extends": [
+    "plugin:react/recommended",
+    "prettier",
+    "prettier/react",
+    "plugin:jsx-a11y/recommended"
+  ],
   "parserOptions": {
     "ecmaVersion": 7,
     "sourceType": "module",
@@ -13,13 +18,13 @@
   "env": {
     "es6": true,
     "node": true,
-    "jest": true
+    "jest": true,
+    "browser": true
   },
   "rules": {
     "no-console": "off",
     "valid-jsdoc": "off",
     "require-jsdoc": "off",
-    "quotes": ["error", "single"],
     "indent": ["error", 2],
     "arrow-body-style": [
       "error",
@@ -28,16 +33,6 @@
     ],
     "jsx-quotes": ["error", "prefer-double"],
     "semi": ["error", "never"],
-    "object-curly-spacing": ["error", "always"],
-    "comma-dangle": [
-      "error",
-      {
-        "arrays": "always-multiline",
-        "objects": "always-multiline",
-        "imports": "always-multiline",
-        "exports": "always-multiline",
-        "functions": "ignore"
-      }
-    ]
+    "object-curly-spacing": ["error", "always"]
   }
 }
