--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "babel-eslint": "^8.0",
     "babel-plugin-styled-components": "^1.2.0",
     "eslint": "^4.6.1",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-config-react": "^1.1.7",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.3.0",
