--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.5.0",
   "author": "Mark Michon <michon@gmail.com>",
   "dependencies": {
+    "dotenv": "^4.0.0",
     "gatsby": "^1.9.49",
     "gatsby-link": "^1.6.16",
     "gatsby-plugin-catch-links": "^1.0.8",
