--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
+    "serve": "gatsby serve",
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rm -rf public/*.html"
   },
@@ -32,6 +33,7 @@
     "eslint-plugin-react": "^7.3.0",
     "gatsby-plugin-styled-components": "^1.0.5",
     "prettier": "^1.6.1",
-    "prettier-eslint": "^8.0.0"
+    "prettier-eslint": "^8.0.0",
+    "prop-types": "^15.6.0"
   }
 }
