--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "gatsby-plugin-feed-generator": "^1.0.5",
     "gatsby-plugin-preact": "^1.0.11",
     "gatsby-plugin-react-helmet": "^1.0.6",
+    "gatsby-plugin-sharp": "^1.6.41",
+    "gatsby-remark-images": "^1.5.60",
     "gatsby-remark-prismjs": "^1.2.8",
     "gatsby-source-filesystem": "^1.4.12",
     "gatsby-transformer-remark": "^1.7.7"
@@ -18,6 +20,7 @@
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
+    "start": "gatsby develop",
     "serve": "gatsby serve",
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rm -rf public/*.html"
