--- a/package.json
+++ b/package.json
@@ -5,19 +5,21 @@
   "author": "Mark Michon <michon@gmail.com>",
   "dependencies": {
     "dotenv": "^4.0.0",
-    "gatsby": "^1.9.49",
-    "gatsby-link": "^1.6.16",
-    "gatsby-plugin-catch-links": "^1.0.8",
-    "gatsby-plugin-feed-generator": "^1.0.5",
-    "gatsby-plugin-preact": "^1.0.11",
-    "gatsby-plugin-react-helmet": "^1.0.6",
-    "gatsby-plugin-react-next": "^1.0.11",
-    "gatsby-plugin-sharp": "^1.6.41",
-    "gatsby-remark-images": "^1.5.60",
-    "gatsby-remark-prismjs": "^1.2.8",
-    "gatsby-source-filesystem": "^1.4.12",
-    "gatsby-transformer-remark": "^1.7.7",
-    "rehype-react": "^3.0.2"
+    "gatsby": "next",
+    "gatsby-plugin-catch-links": "next",
+    "gatsby-plugin-feed-generator": "latest",
+    "gatsby-plugin-react-helmet": "next",
+    "gatsby-plugin-sharp": "next",
+    "gatsby-plugin-styled-components": "next",
+    "gatsby-remark-images": "next",
+    "gatsby-remark-prismjs": "next",
+    "gatsby-source-filesystem": "next",
+    "gatsby-transformer-remark": "next",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0",
+    "react-helmet": "^5.2.0",
+    "rehype-react": "^3.0.2",
+    "styled-components": "^3.3.0"
   },
   "scripts": {
     "build": "gatsby build",
@@ -33,10 +35,10 @@
     "eslint": "^4.6.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-config-react": "^1.1.7",
+    "eslint-config-react-app": "^2.1.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.3.0",
-    "gatsby-plugin-styled-components": "^1.0.5",
     "prettier": "^1.6.1",
     "prettier-eslint": "^8.0.0",
     "prop-types": "^15.6.0"
