--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react-dom": "^16.4.0",
     "react-helmet": "^5.2.0",
     "rehype-react": "^3.0.2",
-    "styled-components": "^3.3.0"
+    "styled-components": "^3.3.0",
+    "styled-system": "^2.2.5",
+    "system-components": "^2.0.3"
   },
   "scripts": {
     "build": "gatsby build",
@@ -37,7 +39,6 @@
     "eslint-config-react": "^1.1.7",
     "eslint-config-react-app": "^2.1.0",
     "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.3.0",
     "prettier": "^1.6.1",
     "prettier-eslint": "^8.0.0",
