Setup better linting

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "scripts": {
     "build": "gatsby build",
+    "lint": "eslint src/** --fix",
     "develop": "gatsby develop",
     "start": "gatsby develop",
     "serve": "gatsby serve",
@@ -35,11 +36,14 @@
     "babel-eslint": "^8.0",
     "babel-plugin-styled-components": "^1.5.1",
     "eslint": "^4.6.1",
+    "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-config-react": "^1.1.7",
     "eslint-config-react-app": "^2.1.0",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-react": "^7.3.0",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-prettier": "^2.6.0",
+    "eslint-plugin-react": "^7.8.2",
     "prettier": "^1.6.1",
     "prettier-eslint": "^8.0.0",
     "prop-types": "^15.6.0"
