--- a/package.json
+++ b/package.json
@@ -2,50 +2,50 @@
   "name": "markmichon.com",
   "description": "markmichon.com",
   "version": "0.5.0",
-  "author": "Mark Michon <michon@gmail.com>",
+  "author": "Mark Michon <hello@markmichon.com>",
   "dependencies": {
-    "dotenv": "^4.0.0",
-    "gatsby": "next",
-    "gatsby-plugin-catch-links": "next",
+    "dotenv": "^6.2.0",
+    "gatsby": "2.1.30",
+    "gatsby-plugin-catch-links": "2.0.13",
     "gatsby-plugin-feed-generator": "latest",
-    "gatsby-plugin-react-helmet": "next",
-    "gatsby-plugin-sharp": "next",
-    "gatsby-plugin-styled-components": "next",
-    "gatsby-remark-images": "next",
-    "gatsby-remark-prismjs": "next",
-    "gatsby-source-filesystem": "next",
-    "gatsby-transformer-remark": "next",
-    "react": "^16.4.0",
-    "react-dom": "^16.4.0",
+    "gatsby-plugin-react-helmet": "3.0.9",
+    "gatsby-plugin-sharp": "^2.0.27",
+    "gatsby-plugin-styled-components": "3.0.7",
+    "gatsby-remark-images": "3.0.8",
+    "gatsby-remark-prismjs": "3.2.5",
+    "gatsby-source-filesystem": "2.0.24",
+    "gatsby-transformer-remark": "2.3.2",
+    "prismjs": "^1.15.0",
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4",
     "react-helmet": "^5.2.0",
-    "rehype-react": "^3.0.2",
-    "styled-components": "^3.3.0",
-    "styled-system": "^2.2.5",
-    "system-components": "^2.0.3"
+    "rehype-react": "^3.1.0",
+    "styled-components": "^4.1.3",
+    "styled-system": "^4.0.3"
   },
   "scripts": {
     "build": "gatsby build",
     "lint": "eslint src/** --fix",
-    "develop": "gatsby develop",
+    "dev": "gatsby develop",
     "start": "gatsby develop",
     "serve": "gatsby serve",
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rm -rf public/*.html"
   },
   "devDependencies": {
-    "babel-eslint": "^8.0",
-    "babel-plugin-styled-components": "^1.5.1",
-    "eslint": "^4.6.1",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-config-prettier": "^2.9.0",
+    "babel-eslint": "^10.0.1",
+    "babel-plugin-styled-components": "^1.10.0",
+    "eslint": "^5.15.1",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^4.1.0",
     "eslint-config-react": "^1.1.7",
-    "eslint-config-react-app": "^2.1.0",
-    "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-prettier": "^2.6.0",
-    "eslint-plugin-react": "^7.8.2",
-    "prettier": "^1.6.1",
-    "prettier-eslint": "^8.0.0",
-    "prop-types": "^15.6.0"
+    "eslint-config-react-app": "^3.0.8",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.12.4",
+    "prettier": "^1.16.4",
+    "prettier-eslint": "^8.8.2",
+    "prop-types": "^15.7.2"
   }
 }
