--- a/package.json
+++ b/package.json
@@ -4,24 +4,29 @@
   "version": "0.5.0",
   "author": "Mark Michon <hello@markmichon.com>",
   "dependencies": {
-    "dotenv": "^6.2.0",
-    "gatsby": "2.1.30",
+    "@emotion/core": "^10.0.10",
+    "@emotion/styled": "^10.0.10",
+    "@mdx-js/mdx": "^1.0.18",
+    "@mdx-js/react": "^1.0.16",
+    "@mdx-js/tag": "^0.20.3",
+    "dotenv": "^8.0.0",
+    "emotion-theming": "^10.0.10",
+    "gatsby": "2.4.2",
+    "gatsby-mdx": "^0.6.3",
     "gatsby-plugin-catch-links": "2.0.13",
+    "gatsby-plugin-emotion": "^4.0.6",
     "gatsby-plugin-feed-generator": "latest",
-    "gatsby-plugin-react-helmet": "3.0.9",
-    "gatsby-plugin-sharp": "^2.0.27",
-    "gatsby-plugin-styled-components": "3.0.7",
-    "gatsby-remark-images": "3.0.8",
-    "gatsby-remark-prismjs": "3.2.5",
-    "gatsby-source-filesystem": "2.0.24",
-    "gatsby-transformer-remark": "2.3.2",
-    "prismjs": "^1.15.0",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
-    "react-helmet": "^5.2.0",
-    "rehype-react": "^3.1.0",
-    "styled-components": "^4.1.3",
-    "styled-system": "^4.0.3"
+    "gatsby-plugin-react-helmet": "3.0.12",
+    "gatsby-plugin-sharp": "^2.0.36",
+    "gatsby-remark-images": "3.0.11",
+    "gatsby-source-filesystem": "2.0.33",
+    "gatsby-transformer-yaml": "^2.1.12",
+    "prism-react-renderer": "^0.1.6",
+    "prismjs": "^1.16.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.1",
+    "styled-system": "^4.2.2"
   },
   "scripts": {
     "build": "gatsby build",
@@ -34,17 +39,16 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
-    "babel-plugin-styled-components": "^1.10.0",
-    "eslint": "^5.15.1",
+    "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^4.1.0",
+    "eslint-config-prettier": "^4.2.0",
     "eslint-config-react": "^1.1.7",
-    "eslint-config-react-app": "^3.0.8",
-    "eslint-plugin-import": "^2.16.0",
+    "eslint-config-react-app": "^4.0.0",
+    "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react": "^7.12.4",
-    "prettier": "^1.16.4",
+    "eslint-plugin-react": "^7.13.0",
+    "prettier": "^1.17.0",
     "prettier-eslint": "^8.8.2",
     "prop-types": "^15.7.2"
   }
