--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby-plugin-catch-links": "2.0.13",
     "gatsby-plugin-emotion": "^4.0.6",
     "gatsby-plugin-feed-generator": "latest",
+    "gatsby-plugin-manifest": "^2.1.1",
     "gatsby-plugin-react-helmet": "3.0.12",
     "gatsby-plugin-sharp": "^2.0.36",
     "gatsby-remark-images": "3.0.11",
