--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby-plugin-manifest": "^2.1.1",
     "gatsby-plugin-react-helmet": "3.0.12",
     "gatsby-plugin-sharp": "^2.0.36",
+    "gatsby-plugin-subfont": "^1.0.6",
     "gatsby-remark-images": "3.0.11",
     "gatsby-source-filesystem": "2.0.33",
     "gatsby-transformer-yaml": "^2.1.12",
@@ -28,10 +29,12 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
-    "styled-system": "^4.2.2"
+    "shell-escape": "^0.2.0",
+    "styled-system": "^4.2.2",
+    "subfont": "^3.6.2"
   },
   "scripts": {
-    "build": "gatsby build",
+    "build": "NODE_OPTIONS=--max-old-space-size=8192 gatsby build",
     "lint": "eslint src/** --fix",
     "dev": "gatsby develop",
     "start": "gatsby develop",
