--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "gatsby-mdx": "^0.6.3",
     "gatsby-plugin-catch-links": "2.0.13",
     "gatsby-plugin-emotion": "^4.0.6",
-    "gatsby-plugin-feed-generator": "latest",
+    "gatsby-plugin-feed-generator": "^2.0.0-0",
     "gatsby-plugin-manifest": "^2.1.1",
     "gatsby-plugin-react-helmet": "3.0.12",
     "gatsby-plugin-sharp": "^2.0.36",
