--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "emotion-theming": "^10.0.10",
     "gatsby": "2.9.2",
     "gatsby-mdx": "^0.6.3",
+    "gatsby-plugin-accessibilityjs": "^1.0.3",
     "gatsby-plugin-catch-links": "2.0.15",
     "gatsby-plugin-emotion": "^4.0.7",
     "gatsby-plugin-feed-generator": "^2.0.0",
