Switch to gatsby-plugin-mdx from gatsby-mdx

--- a/package.json
+++ b/package.json
@@ -6,24 +6,24 @@
   "dependencies": {
     "@emotion/core": "^10.0.10",
     "@emotion/styled": "^10.0.12",
-    "@markmichon/system-font-stacks": "^0.1.1",
+    "@markmichon/system-font-stacks": "^0.2.0",
     "@mdx-js/mdx": "^1.0.20",
     "@mdx-js/react": "^1.0.20",
     "@mdx-js/tag": "^0.20.3",
     "dotenv": "^8.0.0",
     "emotion-theming": "^10.0.10",
-    "gatsby": "2.9.2",
-    "gatsby-mdx": "^0.6.3",
+    "gatsby": "2.13.27",
     "gatsby-plugin-accessibilityjs": "^1.0.3",
-    "gatsby-plugin-catch-links": "2.0.15",
+    "gatsby-plugin-catch-links": "2.1.2",
     "gatsby-plugin-emotion": "^4.0.7",
     "gatsby-plugin-feed-generator": "^2.0.0",
     "gatsby-plugin-manifest": "^2.1.1",
-    "gatsby-plugin-react-helmet": "3.0.12",
+    "gatsby-plugin-mdx": "^1.0.13",
+    "gatsby-plugin-react-helmet": "3.1.2",
     "gatsby-plugin-sharp": "^2.1.5",
     "gatsby-plugin-subfont": "^1.0.6",
-    "gatsby-remark-images": "3.0.14",
-    "gatsby-source-filesystem": "2.0.39",
+    "gatsby-remark-images": "3.1.6",
+    "gatsby-source-filesystem": "2.1.5",
     "gatsby-transformer-remark": "^2.3.12",
     "gatsby-transformer-yaml": "^2.1.12",
     "prism-react-renderer": "^0.1.6",
@@ -47,10 +47,10 @@
   "devDependencies": {
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.8.0",
-    "babel-preset-gatsby": "^0.1.11",
-    "eslint": "^5.16.0",
+    "babel-preset-gatsby": "^0.2.6",
+    "eslint": "^6.0.1",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^4.2.0",
+    "eslint-config-prettier": "^6.0.0",
     "eslint-config-react": "^1.1.7",
     "eslint-config-react-app": "^4.0.0",
     "eslint-plugin-import": "^2.17.2",
@@ -60,7 +60,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.8.0",
     "prettier": "^1.17.0",
-    "prettier-eslint": "^8.8.2",
+    "prettier-eslint": "^9.0.0",
     "prop-types": "^15.7.2",
     "react-test-renderer": "^16.8.6"
   }
