--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mdx-js/mdx": "^1.3.1",
     "@mdx-js/react": "^1.3.1",
     "@mdx-js/tag": "^0.20.3",
+    "@theme-ui/prism": "^0.2.29",
     "dotenv": "^8.1.0",
     "gatsby": "2.13.73",
     "gatsby-plugin-accessibilityjs": "^1.0.3",
