--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "gatsby-plugin-manifest": "^2.2.6",
     "gatsby-plugin-mdx": "^1.0.25",
     "gatsby-plugin-react-helmet": "3.1.4",
-    "gatsby-plugin-sharp": "^2.2.13",
+    "gatsby-plugin-sharp": "^2.2.17",
     "gatsby-plugin-subfont": "^1.1.3",
     "gatsby-plugin-theme-ui": "^0.2.34",
-    "gatsby-remark-images": "3.1.13",
+    "gatsby-remark-images": "^3.1.17",
     "gatsby-source-filesystem": "2.1.11",
     "gatsby-theme-style-guide": "^0.2.35",
     "gatsby-transformer-remark": "^2.6.15",
