--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "prettier": "^1.18.2",
     "prettier-eslint": "^9.0.0",
     "prop-types": "^15.7.2",
-    "react-test-renderer": "^16.9.0"
+    "react-test-renderer": "^16.9.0",
+    "webpack-bundle-analyzer": "^3.5.0"
   }
 }
