--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@mdx-js/tag": "^0.20.3",
     "@theme-ui/prism": "^0.2.29",
     "dotenv": "^8.1.0",
-    "gatsby": "2.13.73",
+    "gatsby": "^2.15.22",
     "gatsby-plugin-accessibilityjs": "^1.0.3",
     "gatsby-plugin-catch-links": "2.1.4",
     "gatsby-plugin-feed-generator": "^2.0.3",
