--- a/data/projects.yaml
+++ b/data/projects.yaml
@@ -1,15 +1,37 @@
 - title: Rubric Builder
   url: https://github.com/markmichon/rubric-builder
   description: An app that makes creating rubrics and grading easier for teachers.
-- title: classroom-master-lockdown
-  url: https://github.com/markmichon/classroom-master-lockdown
-  description: A tool for automatically protecting the master branch on newly generated repos.
+  tags:
+    - React
+    - Serverless
+    - Mongoose
+    - Node
+    - GraphQl
 - title: Not a Whippet
   url: https://notawhippet.com
   description: An app using custom vision to detect dog breeds.
+  tags:
+    - React
+    - Gatsby
+    - Azure Custom Vision
+    - Serverless
+    - Node
 - title: gatsby-plugin-feed-generator
   url: https://github.com/markmichon/gatsby-plugin-feed-generator
   description: JSON Feed and RSS Feed Generator for Gatsby
+  tags:
+    - Gatsby
+    - Node
 - title: system-font-stacks
   url: https://github.com/markmichon/system-font-stacks
   description: Utilities for including the latest system font stack in your styles.
+  tags:
+    - CSS-in-JS
+    - Javascript
+- title: classroom-master-lockdown
+  url: https://github.com/markmichon/classroom-master-lockdown
+  description: A tool for automatically protecting the master branch on newly generated repos.
+  tags:
+    - Probot
+    - GitHub
+    - Node
