feat: add vale and associated rules

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "highlight.js": "^11.8.0",
     "js-yaml": "^4.1.0",
     "markdown-it-footnote": "^3.0.3",
-    "markdown-it-highlightjs": "^4.0.1"
+    "markdown-it-highlightjs": "^4.0.1",
+    "prettier": "^3.1.0"
   },
   "dependencies": {
     "markdown-it": "^13.0.1",
