--- a/src/data/projects.yaml
+++ b/src/data/projects.yaml
@@ -1,6 +1,6 @@
 - title: classroom-master-lockdown
   url: https://github.com/markmichon/classroom-master-lockdown
-  description: A tool for automatically protecting the master branch on newly generated repos.
+  description: A tool for automatically protecting the master branch on newly generated repositories.
 - title: Not a Whippet
   url: https://notawhippet.com
   description: An app using custom vision to detect dog breeds.
