--- a/.vale/styles/mm/spelling.yml
+++ b/.vale/styles/mm/spelling.yml
@@ -1,6 +1,6 @@
 ---
 extends: spelling
 message: "Did you really mean '%s'?"
-level: error
-filters:
+level: warning
 ignore: exceptions.txt
+filters:
