add opengraph image plugin and logic

--- a/package.json
+++ b/package.json
@@ -28,11 +28,14 @@
     "@11ty/eleventy-plugin-rss": "^1.2.0",
     "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
     "@11ty/eleventy-plugin-webc": "^0.11.1",
+    "@sindresorhus/slugify": "^2.2.1",
+    "canvas": "^2.11.2",
     "highlight.js": "^11.8.0",
     "js-yaml": "^4.1.0",
     "markdown-it-footnote": "^3.0.3",
     "markdown-it-highlightjs": "^4.0.1",
-    "prettier": "^3.1.0"
+    "prettier": "^3.1.0",
+    "sharp": "^0.33.3"
   },
   "dependencies": {
     "markdown-it": "^13.0.1",
