--- a/.markdownlint.yaml
+++ b/.markdownlint.yaml
@@ -1,3 +1,11 @@
 ---
 default: true
 MD013: false
+MD033: false
+MD036: false
+MD049:
+  style: "asterisk"
+MD050:
+  style: "asterisk"
+MD051: false
+
