--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -17,13 +17,30 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '23'  # Adjust to your Node version
-          cache: 'npm'
+      
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9  # Adjust to your pnpm version
+      
+      - name: Get pnpm store directory
+        shell: bash
+        run: |
+          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+      
+      - name: Setup pnpm cache
+        uses: actions/cache@v4
+        with:
+          path: ${{ env.STORE_PATH }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
       
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install --frozen-lockfile
       
       - name: Build 11ty site
-        run: npm run build  # Adjust if your build command is different
+        run: pnpm run build  # Adjust if your build command is different
       
       - name: Deploy to server via SSH
         uses: easingthemes/ssh-deploy@v5.1.0
