--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -45,15 +45,15 @@ jobs:
       - name: Deploy to server via SSH
         uses: easingthemes/ssh-deploy@v5.1.0
         with:
-          SSH_PRIVATE_KEY: ${{ secrets.KEY }}
-          REMOTE_HOST: ${{ secrets.HOST }}
-          REMOTE_USER: ${{ secrets.USERNAME }}
-          SOURCE: "dist/"  # 11ty output directory
-          TARGET: ${{ secrets.REMOTE_TARGET }}
-          EXCLUDE: "/node_modules/, /.git/, /.github/"
-          SCRIPT_BEFORE: |
+          ssh_private_key: ${{ secrets.KEY }}
+          remote_host: ${{ secrets.HOST }}
+          remote_user: ${{ secrets.USERNAME }}
+          source: "dist/"  # 11ty output directory
+          target: ${{ secrets.REMOTE_TARGET }}
+          exclude: "/node_modules/, /.git/, /.github/"
+          script_before: |
             whoami
             ls -la
-          SCRIPT_AFTER: |
+          script_after: |
             echo "Deployment completed successfully"
             ls -la ${{ secrets.REMOTE_TARGET }}
